--- a/about-us.html
+++ b/about-us.html
@@ -79,7 +79,7 @@
                       <div class="logo-default">
                           <a class="navbar-brand "
                                       href="./index.html">
-                              <img class="img-fluid logo" src="./assets/images/marvel-logo.png"
+                              <img class="img-fluid logo" src="./assets/images/marvel-creation-logo.png"
                                   alt="maravel-creation-logo">
                           </a>
                       </div>
@@ -96,7 +96,7 @@
                                   <div class="logo-default">
                                       <a class="navbar-brand "
                                       href="./index.html">
-                                          <img class="img-fluid logo" src="./assets/images/marvel-logo.png"
+                                          <img class="img-fluid logo" src="./assets/images/assets/images/marvel-creation-logo.png"
                                               alt="maravel-creation-logo">
                                       </a>
                                   </div>
@@ -152,40 +152,27 @@
   </header>      <div class="main-content">
 <div class="section-padding pb-0">
       <div class="container px-3 px-sm-0">
-         <div class="row justify-content-center">
+         <div class="row justify-content-center gy-4">
             <!-- Text Content -->
-            <div class="col-md-12 text-center">
+            <div class="col-md-8">
                <h3 class="about-title mb-5">About Marvel Studio</h3>
                <p>
                  Marvel Creation is an endeavor dedicated to achieving that very goal of photography. We are a Gujarat-based firm that specializes in candid wedding photography and videography and we are also a dedicated group of Indian wedding photographers and candid cinematographers who enjoy capturing and preserving the most beautiful emotions.
                </p>
                <p class="m-0">We operate in photographic studio with a wealth of experience. We're obsessed with upcoming unique, off-the-beaten-path wedding ideas. We've captured hundreds of priceless moments across the state over the past few years. We hold ourselves to an extremely high degree of excellence, and we like to think of ourselves as the golden standard in wedding storytelling in the country.</p>
+            
             </div>
-         </div>
-
-         <!-- Additional Text Section -->
-         <div class="row justify-content-center">
-            <div class="col-md-12 text-center">
-               <p class="custom-about-decs">
-                  At Iqonic Design, we aim to revolutionize digital content consumption with Streamit, a fast, reliable,
-                  and
-                  personalized
-                  streaming platform. Built with cutting-edge technology, it offers superior streaming quality, tailored
-                  recommendations,
-                  and an intuitive content management system. Our mission is to make entertainment seamless and
-                  accessible,
-                  anytime,
-                  anywhere.
-               </p>
+            <div class="col-md-4">
+                <img src="./assets/images/media/maravel-creation.jpg" class="w-100 about-img rounded" alt="about image">
             </div>
          </div>
       </div>
    </div>
-<div class="hosting-how-it-work">
+<div class="marvel-how-it-work">
     <div class="container">
         <div class="row">
             <div class="col-md-6 pe-0 ps-md-3 ps-0 ">
-                <div class="work-inner bg-gray-900 rounded-start-3 h-100">
+                <div class="work-inner bg-gray-900 rounded-start h-100">
                     <div class="section-title">
                         <span
                             class="decorator-title decorator-font text-primary text-uppercase text-decoration-underline">What
@@ -196,19 +183,19 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 ps-0 pe-md-3 pe-0 rounded-end-3">
-                <img src="https://templates.iqonic.design/qloud-dist/html/assets/images/pages/how-itwork-hosting.png"
-                    alt="img" class="h-100 w-100">
+            <div class="col-md-6 ps-0 pe-md-3 pe-0 rounded-end overflow-hidden">
+                <img src="./assets/images/about-work.png"
+                    alt="work img" class="img-fluid">
             </div>
         </div>
     </div>
 </div>
-<div class="hosting-work-section">
+<div class="marvel-work-section">
     <div class="container">
-        <div class="hosting-work-contianer">
+        <div class="marvel-work-contianer">
             <div class="row">
                 <div class="col-xl-3 col-md-6 mt-md-0 mt-4">
-                    <div class="hosting-work-inner position-relative align-content-start flex-wrap">
+                    <div class="marvel-work-inner position-relative align-content-start flex-wrap">
                         <div class="process-style-step-1">
                             <div class="step-content">
                                 <div class="step-number-inner d-inline-block m-0 rounded-circle">
@@ -225,7 +212,7 @@
                     </div>
                 </div>
                 <div class="col-xl-3  col-md-6 mt-md-0 mt-2">
-                    <div class="hosting-work-inner position-relative align-content-start flex-wrap">
+                    <div class="marvel-work-inner position-relative align-content-start flex-wrap">
                         <div class="process-style-step-1">
                             <div class="step-content">
                                 <div class="step-number-inner d-inline-block m-0 rounded-circle">
@@ -242,7 +229,7 @@
                     </div>
                 </div>
                 <div class="col-xl-3 col-md-6 mt-md-0 mt-2">
-                    <div class="hosting-work-inner position-relative align-content-start flex-wrap">
+                    <div class="marvel-work-inner position-relative align-content-start flex-wrap">
                         <div class="process-style-step-1">
                             <div class="step-content">
                                 <div class="step-number-inner d-inline-block m-0 rounded-circle">
@@ -259,7 +246,7 @@
                     </div>
                 </div>
                 <div class="col-xl-3 col-md-6 mt-md-0 mt-2">
-                    <div class="hosting-work-inner position-relative align-content-start flex-wrap">
+                    <div class="marvel-work-inner position-relative align-content-start flex-wrap">
                         <div class="process-style-step-1">
                             <div class="step-content">
                                 <div class="step-number-inner d-inline-block m-0 rounded-circle">
@@ -312,7 +299,7 @@
             <!--Logo -->
             <div class="logo-default">
               <a class="navbar-brand " href="./index.html">
-                <img class="img-fluid logo" src="./assets/images/marvel-logo.png" alt="maravel-creation-logo">
+                <img class="img-fluid logo" src=".//assets/images/marvel-creation-logo.png" alt="maravel-creation-logo">
               </a>
             </div>
             <p class="mt-5 mb-3 footer-desc">Marvel Creation, a full-service production firm specialising in combining
