--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
                       <div class="logo-default">
                           <a class="navbar-brand "
                                       href="./index.html">
-                              <img class="img-fluid logo" src="./assets/images/marvel-logo.png"
+                              <img class="img-fluid logo" src="./assets/images/marvel-creation-logo.png"
                                   alt="maravel-creation-logo">
                           </a>
                       </div>
@@ -96,7 +96,7 @@
                                   <div class="logo-default">
                                       <a class="navbar-brand "
                                       href="./index.html">
-                                          <img class="img-fluid logo" src="./assets/images/marvel-logo.png"
+                                          <img class="img-fluid logo" src="./assets/images/assets/images/marvel-creation-logo.png"
                                               alt="maravel-creation-logo">
                                       </a>
                                   </div>
@@ -159,68 +159,66 @@
 
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 gy-4">
             <div class="col">
-                <div class="bg-gray-900 border p-4 rounded d-flex gap-3 flex-column h-100">
-                    <span class="h2 m-0  cursor-pointer"><a href="https://wa.me/message/LEY5GTASPWF7I1"
-                            target="_blank"><i class="ph ph-whatsapp-logo text-white"></i></a></span>
-                    <div class="social-info d-flex gap-2 flex-column">
-                        <div>
-                            <h6>WhatsApp</h6>
-                            <a href="https://wa.me/message/LEY5GTASPWF7I1" target="_blank"
-                                class="text-white cursor-pointer">Marvel Creation</a>
-                        </div>
-                        <div class="social-followers">
-
-                        </div>
-                    </div>
-                </div>
+                <a href="https://wa.me/message/LEY5GTASPWF7I1" target="_blank" class="d-block h-100">
+                    <span href="https://wa.me/message/LEY5GTASPWF7I1" target="_blank"
+                        class="d-block bg-gray-900 border p-4 rounded d-flex gap-3 flex-column h-100">
+                        <span class="h2 m-0  cursor-pointer"><i class="ph ph-whatsapp-logo text-white"></i></span>
+                        <span class="social-info d-flex gap-2 flex-column">
+                            <span>
+                                <h6>WhatsApp</h6>
+                                <span>Marvel Creation</span>
+                            </span>
+                        </span>
+                    </span>
+                </a>
             </div>
             <div class="col">
-                <div class="bg-gray-900 border p-4 rounded d-flex gap-3 flex-column">
-                    <span class="h2 m-0 cursor-pointer"><a href="https://www.instagram.com/marvelcreation.in/"
-                            target="_blank"><i class="ph ph-instagram-logo text-white"></i></a></span>
-                    <div class="social-info d-flex gap-2 flex-column">
-                        <div>
-                            <h6>Instagram</h6>
-                            <a href="https://www.instagram.com/marvelcreation.in/" target="_blank"
-                                class="text-white cursor-pointer">@marvelcreation.in/</a>
-                        </div>
-                        <div class="social-followers">
-                            <span class="text-white">Followers: 3k</span>
-                        </div>
-                    </div>
-                </div>
+                <a href="https://www.instagram.com/marvelcreation.in/" target="_blank" class="d-block h-100">
+                    <span class="bg-gray-900 border p-4 rounded d-flex gap-3 flex-column">
+                        <span class="h2 m-0 cursor-pointer"><i class="ph ph-instagram-logo text-white"></i></span>
+                        <span class="social-info d-flex gap-2 flex-column">
+                            <span>
+                                <h6>Instagram</h6>
+                                <span>@marvelcreation.in/</span>
+                            </span>
+                            <span class="social-followers">
+                                <span class="text-white">Followers: 3k</span>
+                            </span>
+                        </span>
+                    </span>
+                </a>
             </div>
             <div class="col">
-                <div class="bg-gray-900 border p-4 rounded d-flex gap-3 flex-column">
-                    <span class="h2 m-0 cursor-pointer"><a href="https://www.facebook.com/marvelcreation.in/"
-                            target="_blank"><i class="ph ph-facebook-logo text-white"></i></a></span>
-                    <div class="social-info d-flex gap-2 flex-column">
-                        <div>
+                <a href="https://www.facebook.com/marvelcreation.in/" class="d-block h-100" target="_blank">
+                <span class="bg-gray-900 border p-4 rounded d-flex gap-3 flex-column">
+                    <span class="h2 m-0 cursor-pointer"><i class="ph ph-facebook-logo text-white"></i></span>
+                    <span class="social-info d-flex gap-2 flex-column">
+                        <span>
                             <h6>Facebook</h6>
-                            <a href="https://www.facebook.com/marvelcreation.in/" target="_blank"
-                                class="text-white cursor-pointer">Marvel Creation </a>
-                        </div>
-                        <div class="social-followers">
+                            <span>Marvel Creation </span>
+                        </span>
+                        <span class="social-followers">
                             <span class="text-white">Followers: 81</span>
-                        </div>
-                    </div>
-                </div>
+                        </span>
+                    </span>
+                </span>
+                </a>
             </div>
             <div class="col">
-                <div class="bg-gray-900 border p-4 rounded d-flex gap-3 flex-column">
-                    <span class="h2 m-0  cursor-pointer"><a href="https://www.youtube.com/@marvelcreationin"
-                            target="_blank"><i class="ph ph-youtube-logo text-white"></i></a></span>
-                    <div class="social-info d-flex gap-2 flex-column">
-                        <div>
+                <a href="https://www.youtube.com/@marvelcreationin" class="d-block h-100" target="_blank">
+                <span class="bg-gray-900 border p-4 rounded d-flex gap-3 flex-column">
+                    <span class="h2 m-0  cursor-pointer"><i class="ph ph-youtube-logo text-white"></i></span>
+                    <span class="social-info d-flex gap-2 flex-column">
+                        <span>
                             <h6>YouTube</h6>
-                            <a href="https://www.youtube.com/@marvelcreationin" target="_blank"
-                                class="text-white cursor-pointer">@marvelcreationin</a>
-                        </div>
-                        <div class="social-followers">
+                           <span>@marvelcreationin</span>
+                        </span>
+                        <span class="social-followers">
                             <span class="text-white">Followers: 393</span>
-                        </div>
-                    </div>
-                </div>
+                        </span>
+                    </span>
+                </span>
+                </a>
             </div>
         </div>
     </div>
@@ -228,18 +226,21 @@
 <div class="section-padding pt-0">
     <div class="leave-section">
         <div class="container">
-             <div class="section-title text-center">
-                <span class="decorator-title decorator-font text-primary text-uppercase text-decoration-underline">Let's Connect</span>
-                <h5 class="title">Ready to capture your story? We'd love to hear about your vision and discuss how we </br>can bring it to life through photography.</h5>
+            <div class="section-title text-center">
+                <span class="decorator-title decorator-font text-primary text-uppercase text-decoration-underline">Let's
+                    Connect</span>
+                <h5 class="title">Ready to capture your story? We'd love to hear about your vision and discuss how we
+                    </br>can bring it to life through photography.</h5>
             </div>
             <div class="row gy-4">
                 <div class="col-md-7 col-lg-8">
                     <div class="bg-gray-900 p-3 p-md-4 rounded">
                         <div class="mb-5">
                             <h4>Leave A Reply</h4>
-                            <p class="font-size-14">Your email address will not be published. Required fields are marked*</p>
+                            <p class="font-size-14">Your email address will not be published. Required fields are
+                                marked*</p>
                         </div>
-                               <form >
+                        <form>
 
                             <div class="row gy-4">
                                 <div class="col-lg-6">
@@ -285,26 +286,29 @@
                         <div class="col-12">
                             <div class="bg-gray-900 border rounded p-3 d-flex gap-3 flex-column h-100">
                                 <div class="d-flex align-items-center gap-4 mb-3">
-                                    <div class="icon-box d-flex align-items-center justify-content-center bg-secondary-subtle avatar-80 rounded">
+                                    <div
+                                        class="icon-box d-flex align-items-center justify-content-center bg-secondary-subtle avatar-80 rounded">
                                         <i class="ph ph-envelope text-white h3 m-0"></i>
                                     </div>
                                     <div class="contact-info">
                                         <h6 class="mb-1">Call Now</h6>
-                                        <a href="tel:+1234567890" class="text-white">+1 (234) 567-890</a>
+                                        <a href="tel:+91 9408828700" class="text-white">+91 9408828700</a>
                                         <span class="font-size-12 d-block text-white">Mon - Fri, 9AM - 6PM</span>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                         <div class="col-12">
+                        <div class="col-12">
                             <div class="bg-gray-900 border rounded p-3 d-flex gap-3 flex-column h-100">
                                 <div class="d-flex align-items-center gap-4 mb-3">
-                                    <div class="icon-box d-flex align-items-center justify-content-center bg-secondary-subtle avatar-80 rounded">
+                                    <div
+                                        class="icon-box d-flex align-items-center justify-content-center bg-secondary-subtle avatar-80 rounded">
                                         <i class="ph ph-whatsapp-logo text-white h3 m-0"></i>
                                     </div>
                                     <div class="contact-info">
                                         <h6 class="mb-1">Chat with Us</h6>
-                                        <a href="https://wa.me/message/LEY5GTASPWF7I1" class="text-white">+1 (234) 567-890</a>
+                                        <a href="https://wa.me/message/LEY5GTASPWF7I1" class="text-white">+91 9408828700</a>
+</a>
                                         <span class="font-size-12 d-block text-white">We respond within 24 hours</span>
                                     </div>
                                 </div>
@@ -313,13 +317,16 @@
                         <div class="col-12">
                             <div class="bg-gray-900 border rounded p-3 d-flex gap-3 flex-column h-100">
                                 <div class="d-flex align-items-center gap-4 mb-3">
-                                    <div class="icon-box d-flex align-items-center justify-content-center bg-secondary-subtle avatar-80 rounded">
+                                    <div
+                                        class="icon-box d-flex align-items-center justify-content-center bg-secondary-subtle avatar-80 rounded">
                                         <i class="ph ph-map-pin text-white h3 m-0"></i>
                                     </div>
                                     <div class="contact-info">
                                         <h6 class="mb-1">Visit Studio</h6>
-                                        <a href="https://maps.app.goo.gl/gRncKCc9arAY29yP7" class="text-white">+1 (234) 567-890</a>
-                                        <span class="font-size-12 d-block text-white">Ghej Vaghaldhara Road, Ta.Chikhli, Dist.Navsari, Gujarat-396521</span>
+                                        <a href="https://maps.app.goo.gl/gRncKCc9arAY29yP7" class="text-white">
+                                            <span class="font-size-12 d-block text-white">Ghej Vaghaldhara Road, Ta.Chikhli,
+                                                Dist.Navsari, Gujarat-396521</span>
+                                        </a>
                                     </div>
                                 </div>
                             </div>
@@ -348,7 +355,7 @@
             <!--Logo -->
             <div class="logo-default">
               <a class="navbar-brand " href="./index.html">
-                <img class="img-fluid logo" src="./assets/images/marvel-logo.png" alt="maravel-creation-logo">
+                <img class="img-fluid logo" src=".//assets/images/marvel-creation-logo.png" alt="maravel-creation-logo">
               </a>
             </div>
             <p class="mt-5 mb-3 footer-desc">Marvel Creation, a full-service production firm specialising in combining
