--- a/films.html
+++ b/films.html
@@ -79,7 +79,7 @@
                       <div class="logo-default">
                           <a class="navbar-brand "
                                       href="./index.html">
-                              <img class="img-fluid logo" src="./assets/images/marvel-logo.png"
+                              <img class="img-fluid logo" src="./assets/images/marvel-creation-logo.png"
                                   alt="maravel-creation-logo">
                           </a>
                       </div>
@@ -96,7 +96,7 @@
                                   <div class="logo-default">
                                       <a class="navbar-brand "
                                       href="./index.html">
-                                          <img class="img-fluid logo" src="./assets/images/marvel-logo.png"
+                                          <img class="img-fluid logo" src="./assets/images/assets/images/marvel-creation-logo.png"
                                               alt="maravel-creation-logo">
                                       </a>
                                   </div>
@@ -150,7 +150,7 @@
               </div>
       </nav>
   </header>      <div class="main-content">
-<section class="section-padding ">
+<section class="section-padding-top">
     <div class="films-detail-page">
         <div class="container-fluid">
             <div class="section-title text-center">
@@ -173,7 +173,7 @@
                                 <ul class="nav nav-pills d-flex align-items-center justify-content-center column-gap-3 row-gap-2 flex-wrap"
                                     role="tablist">
                                     <li class="films-data-card active nav-link rounded" data-bs-toggle="pill"
-                                        href="#birthday-video">
+                                        href="#mariage-video">
                                         <div class="films-data-card-image">
                                             <a href="#">
                                                 <img src="./assets/images/img-2.jpeg" alt="Marriage"
@@ -187,16 +187,16 @@
 
                                         </div>
                                     </li>
-                                    <li class="films-data-card nav-link rounded" data-bs-toggle="pill" href="#mariage-video">
+                                    <li class="films-data-card nav-link rounded" data-bs-toggle="pill" href="#preWedding-video">
                                         <div class="films-data-card-image">
                                             <a href="#">
-                                                <img src="./assets/images/img-3.jpeg" alt="engagement"
+                                                <img src="./assets/images/img-3.jpeg" alt="preWedding"
                                                     class="img-fluid object-cover w-100 border-0">
                                             </a>
                                         </div>
                                         <div class="films-data-card-content">
                                             <h6 class="mt-0 mb-2 line-count-2 films-data-title">
-                                                <a href="#">Engagement</a>
+                                                <a href="#">Pre Wedding</a>
                                             </h6>
                                         </div>
                                     </li>
@@ -209,7 +209,7 @@
                 <div class="col-xxl-9 col-xl-8 col-lg-7 mt-lg-0 mt-4">
                     <!-- Tab panes -->
                     <div class="tab-content mt-5">
-                        <div id="birthday-video" class="container tab-pane active">
+                        <div id="mariage-video" class="container tab-pane active">
                             <div class="films-main-banner position-relative mb-3">
                                 <div class="video-container"></div>
                                 <iframe
@@ -222,11 +222,11 @@
                             <div
                                 class="trending-info d-flex justify-content-between align-items-center gap-4">
                                 <a href="#">
-                                    <h4 class="my-2 fw-bold">Birthday</h4>
+                                    <h4 class="my-2 fw-bold">Marriage</h4>
                                 </a>
                             </div>
                         </div>
-                        <div id="mariage-video" class="container tab-pane fade">
+                        <div id="preWedding-video" class="container tab-pane fade">
                             <div class="playlist-main-banner position-relative mb-3">
                                 <div class="video-container"></div>
                                 <iframe width="100%" height="400" src="https://www.youtube.com/embed/wzW-3I76PW4?si=4K8LYHex_04dX6l8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -234,7 +234,7 @@
                             <div id="streamit_player_container"
                                 class="trending-info d-flex justify-content-between align-items-center gap-4">
                                 <a href="#">
-                                    <h4 class="my-2 fw-bold">Marriage</h4>
+                                    <h4 class="my-2 fw-bold">Pre Wedding</h4>
                                 </a>
                             </div>
                         </div>
@@ -274,7 +274,7 @@
             <!--Logo -->
             <div class="logo-default">
               <a class="navbar-brand " href="./index.html">
-                <img class="img-fluid logo" src="./assets/images/marvel-logo.png" alt="maravel-creation-logo">
+                <img class="img-fluid logo" src=".//assets/images/marvel-creation-logo.png" alt="maravel-creation-logo">
               </a>
             </div>
             <p class="mt-5 mb-3 footer-desc">Marvel Creation, a full-service production firm specialising in combining
