--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                       <div class="logo-default">
                           <a class="navbar-brand active"
                                       href="./index.html">
-                              <img class="img-fluid logo" src="./assets/images/marvel-logo.png"
+                              <img class="img-fluid logo" src="./assets/images/marvel-creation-logo.png"
                                   alt="maravel-creation-logo">
                           </a>
                       </div>
@@ -96,7 +96,7 @@
                                   <div class="logo-default">
                                       <a class="navbar-brand active"
                                       href="./index.html">
-                                          <img class="img-fluid logo" src="./assets/images/marvel-logo.png"
+                                          <img class="img-fluid logo" src="./assets/images/assets/images/marvel-creation-logo.png"
                                               alt="maravel-creation-logo">
                                       </a>
                                   </div>
@@ -155,7 +155,7 @@
   <div class="main-banner">
     <div class="slick-banner main-slider">
       <!-- Banner 1 -->
-      <div class="slick-item banner-bg m-0" style="background-image: url(./assets/images/banner.webp)">
+      <div class="slick-item banner-bg m-0" style="background-image: url(./assets/images/media/banner.jpg);">
         <div class="container-fluid position-relative">
           <div class="row align-items-center h-100 content-full-height gy-4">
             <div class="col-lg-6 col-md-12 col-xl-5">
@@ -195,8 +195,6 @@
         </div>
       </div>
 
-      <!-- Banner 2 -->
-
       <!-- Add more banners here if needed -->
 
     </div>
@@ -214,7 +212,7 @@
                 <div class="slick-slide">
                     <div class="portfolio-card">
                         <a href="./photography.html" class="portfolio-img">
-                            <img src="./assets/images/img-1.jpeg" alt="maravel-portfolio" class="img-inner img-fluid">
+                            <img src="./assets/images/media/portfolio1.jpg" alt="maravel-portfolio" class="img-inner img-fluid">
                         </a>
                         <div class="portfolio-content d-flex align-items-center gap-1 flex-wrap flex-md-nowrap justify-content-between">
                             <div class="mb-xl-0 mb-4 portfolio-inner">
@@ -229,7 +227,7 @@
                 <div class="slick-slide">
                     <div class="portfolio-card">
                         <a href="./photography.html" class="portfolio-img">
-                            <img src="./assets/images/img-2.jpeg" alt="maravel-portfolio" class="img-inner img-fluid">
+                            <img src="./assets/images/media/portfolio2.jpg" alt="maravel-portfolio" class="img-inner img-fluid">
                         </a>
                         <div class="portfolio-content d-flex align-items-center gap-1 flex-wrap flex-md-nowrap justify-content-between">
                             <div class="mb-xl-0 mb-4 portfolio-inner">
@@ -244,7 +242,7 @@
                 <div class="slick-slide">
                     <div class="portfolio-card">
                         <a href="./photography.html" class="portfolio-img">
-                            <img src="./assets/images/img-3.jpeg" alt="maravel-portfolio" class="img-inner img-fluid">
+                            <img src="./assets/images/media/portfolio3.jpg" alt="maravel-portfolio" class="img-inner img-fluid">
                         </a>
                         <div class="portfolio-content d-flex align-items-center gap-1 flex-wrap flex-md-nowrap justify-content-between">
                             <div class="mb-xl-0 mb-4 portfolio-inner">
@@ -259,7 +257,7 @@
                 <div class="slick-slide">
                     <div class="portfolio-card">
                         <a href="./photography.html" class="portfolio-img">
-                            <img src="./assets/images/img-4.jpeg" alt="maravel-portfolio" class="img-inner img-fluid">
+                            <img src="./assets/images/media/portfolio4.jpg" alt="maravel-portfolio" class="img-inner img-fluid">
                         </a>
                         <div class="portfolio-content d-flex align-items-center gap-1 flex-wrap flex-md-nowrap justify-content-between">
                             <div class="mb-xl-0 mb-4 portfolio-inner">
@@ -274,7 +272,7 @@
                 <div class="slick-slide">
                     <div class="portfolio-card">
                         <a href="./photography.html" class="portfolio-img">
-                            <img src="./assets/images/img-5.jpeg" alt="maravel-portfolio" class="img-inner img-fluid">
+                            <img src="./assets/images/media/portfolio5.jpg" alt="maravel-portfolio" class="img-inner img-fluid">
                         </a>
                         <div class="portfolio-content d-flex align-items-center gap-1 flex-wrap flex-md-nowrap justify-content-between">
                             <div class="mb-xl-0 mb-4 portfolio-inner">
@@ -289,7 +287,7 @@
                 <div class="slick-slide">
                     <div class="portfolio-card">
                         <a href="./photography.html" class="portfolio-img">
-                            <img src="./assets/images/img-6.jpeg" alt="maravel-portfolio" class="img-inner img-fluid">
+                            <img src="./assets/images/media/portfolio6.jpg" alt="maravel-portfolio" class="img-inner img-fluid">
                         </a>
                         <div class="portfolio-content d-flex align-items-center gap-1 flex-wrap flex-md-nowrap justify-content-between">
                             <div class="mb-xl-0 mb-4 portfolio-inner">
@@ -305,7 +303,7 @@
         </div>
     </div>
 </div>
-<div class="section-padding">
+<div class="section-padding-bottom">
     <div class="container">
         <div class="section-title text-center">
             <span class="decorator-title decorator-font text-primary text-uppercase text-decoration-underline">Signature
@@ -316,9 +314,9 @@
             <div class="col-lg-10">
                 <div class="films-trailer-container d-inline-block rounded-3 overflow-hidden">
                     <div class="films-trailer position-relative rounded-3 overflow-hidden">
-                        <img src="./assets/images/banner.webp" class="trailer-image" alt="trailer-image">
+                        <img src="./assets/images/media/banner.jpg" class="trailer-image" alt="trailer-image">
                         <a data-fslightbox="html5-video"
-                            href="https://www.youtube.com/watch?time_continue=4&v=rLgy3eDsi-0&embeds_referring_euri=http%3A%2F%2Flocalhost%3A3000%2F&source_ve_path=MjM4NTE"
+                            href="https://youtu.be/EIbu9qQw7TM?list=TLGGk3s4ZJ6_A-AwOTA5MjAyNQ"
                             class="video-open playbtn text-decoration-none" tabindex="0">
                             <svg version="1.1" xmlns="http://www.w3.org/2000/svg"
                                 xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="80px" height="80px"
@@ -339,7 +337,7 @@
         </div>
     </div>
 </div>
-<section class="section-padding">
+<section>
     <div class="container">
         <div class="section-title text-center">
             <span class="decorator-title decorator-font text-primary text-uppercase text-decoration-underline">What Our Customers Say</span>
@@ -359,7 +357,7 @@
                         <i class="ph-fill ph-star text-warning"></i>
                         <i class="ph-fill ph-star text-warning"></i>
                     </div>
-                    <p class="mb-4">ChatBot AI transformed our customer service completely. We reduced response time by 80% and our customer satisfaction scores are at an all-time high.</p>
+                    <p class="mb-4">Marvel Creation truly made my special moments unforgettable 💕. The way they captured every detail in HD is just magical ✨. From start to finish, their team was humble, professional, and so easy to work with 🙏😊. I’m really grateful for the effort and creativity they put into every shot 📷🌸. Thank you for giving me memories that will last forever 🌈💖.</p>
                     <div class="d-flex align-items-center gap-3 flex-md-nowrap flex-wrap">
                         <img src="./assets/images/client1.jpg" alt="ai Customer" class="rounded-circle" width="50" height="50">
                         <div class="d-flex flex-column">
@@ -381,7 +379,7 @@
                         <i class="ph-fill ph-star text-warning"></i>
                         <i class="ph-fill ph-star text-warning"></i>
                     </div>
-                    <p class="mb-4">The integration was seamless and the AI understanding is remarkable. Our development team was impressed with the API documentation and ease of setup.</p>
+                    <p class="mb-4">Oh my goodness, thank you so much for the amazing photography and filming!</p>
                     <div class="d-flex align-items-center gap-3 flex-md-nowrap flex-wrap">
                         <img src="./assets/images/client2.jpg" alt="ai Customer" class="rounded-circle" width="50" height="50">
                         <div class="d-flex flex-column">
@@ -508,7 +506,7 @@
             <!--Logo -->
             <div class="logo-default">
               <a class="navbar-brand active" href="./index.html">
-                <img class="img-fluid logo" src="./assets/images/marvel-logo.png" alt="maravel-creation-logo">
+                <img class="img-fluid logo" src=".//assets/images/marvel-creation-logo.png" alt="maravel-creation-logo">
               </a>
             </div>
             <p class="mt-5 mb-3 footer-desc">Marvel Creation, a full-service production firm specialising in combining
