--- a/photography.html
+++ b/photography.html
@@ -79,7 +79,7 @@
                       <div class="logo-default">
                           <a class="navbar-brand "
                                       href="./index.html">
-                              <img class="img-fluid logo" src="./assets/images/marvel-logo.png"
+                              <img class="img-fluid logo" src="./assets/images/marvel-creation-logo.png"
                                   alt="maravel-creation-logo">
                           </a>
                       </div>
@@ -96,7 +96,7 @@
                                   <div class="logo-default">
                                       <a class="navbar-brand "
                                       href="./index.html">
-                                          <img class="img-fluid logo" src="./assets/images/marvel-logo.png"
+                                          <img class="img-fluid logo" src="./assets/images/assets/images/marvel-creation-logo.png"
                                               alt="maravel-creation-logo">
                                       </a>
                                   </div>
@@ -150,7 +150,7 @@
               </div>
       </nav>
   </header>      <div class="main-content">
-<div class="section-padding">
+<div class="section-padding-top">
     <div class="container">
         <div class="section-title text-center">
             <span class="decorator-title decorator-font text-primary text-uppercase text-decoration-underline">Signature
@@ -256,7 +256,7 @@
             <!--Logo -->
             <div class="logo-default">
               <a class="navbar-brand " href="./index.html">
-                <img class="img-fluid logo" src="./assets/images/marvel-logo.png" alt="maravel-creation-logo">
+                <img class="img-fluid logo" src=".//assets/images/marvel-creation-logo.png" alt="maravel-creation-logo">
               </a>
             </div>
             <p class="mt-5 mb-3 footer-desc">Marvel Creation, a full-service production firm specialising in combining
